<resources>
    <string name="app_name">1520</string>
    <string name="game_name">15, 20 Game</string>
    <string name="play">Play</string>
    <string name="your_records">Your Records</string>
    <string name="close">Close</string>
    <string name="copyright">Copyright (c) 2025, WONG Sai Lung. All rights reserved.</string>
    <string name="how_to_play">How to play?</string>
    <string name="game_hand_image">Game Hand Image</string>
    <string name="player_icon">"Player icon "</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="add_player">I am New</string>
    <string name="who_are_you">Who are you?</string>
    <string name="new_player">New Player</string>
    <string name="player_name">"Player Name: "</string>
    <string name="example_player_name">Example: Alan</string>
    <string name="gender">Gender</string>
    <string name="round">"Round "</string>
    <string name="computers_hand">Computer\'s Hand:</string>
    <string name="your_hand">Your Hand: (Click the hand)</string>
    <string name="your_left_hand">Your Left Hand</string>
    <string name="your_right_hand">Your Right Hand</string>
    <string name="save_player">Save Player</string>
    <string name="guess">Guess</string>
    <string name="submit">Submit</string>
    <string name="your_guess">"Your Guess: "</string>
    <string name="computer_right_hand">Computer Right Hand</string>
    <string name="computer_left_hand">Computer Left Hand</string>
    <string name="continue_">Continue</string>
    <string name="back"><![CDATA[<]]> Back</string>
    <string name="how_to_play_instructions">Number Fist, also known as \"Five, Ten, Fifteen, Twenty,\" or simply \"Five, Ten, Fifteen,\" and sometimes called \"Fifteen, Twenty,\" is a folk finger-guessing game originating from \"Drinking Fist,\" typically played while drinking alcohol.\n\nThis game is usually played between two people. Each player can show \"zero\" (both hands clenched into fists), \"five\" (one hand open with palm showing, the other clenched into a fist), or \"ten\" (both hands open). One player calls out a number, which can be: \"match,\" \"five,\" \"ten,\" or \"fifteen.\" If the called number matches the total number of fingers shown by both players, the caller wins. In the Hong Kong version, \"zero\" is commonly called \"all in,\" while \"twenty\" is referred to as \"all out.\"\nFor example: I show 5 fingers and call \"fifteen\", and the opponent happens to show 10. Since 5 fingers plus 10 fingers make 15, I win. (Direct victory, or I can call the slogan again.)\nFor example: I show 10 fingers and call \"twenty\", and the opponent shows 5. Since 10 fingers plus 5 fingers make 15, I do not win, and the opponent gets to call the slogan.\nTo increase the excitement of the game, the rule in most regions is that one must guess correctly twice in a row to win a round.</string>
    <string name="you_guess_first">You guess first</string>
    <string name="loading">Loading...</string>
    <string name="no_records_found">No Records Found</string>
</resources>