<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/game_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="startGame"
        android:text="@string/play"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:onClick="viewRecords"
        android:text="@string/your_records"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:onClick="closeApp"
        android:text="@string/close"
        android:textColor="@android:color/white" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:onClick="howToPlay"
        android:text="@string/how_to_play"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_blue_dark" />

    <ImageView
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/game_hand_image"
        android:src="@drawable/hand" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/copyright"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />
</LinearLayout>