<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/design_default_color_secondary"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:id="@+id/select_player">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/who_are_you"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/player_icon"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:src="@drawable/user"
        android:contentDescription="@string/player_icon" />

    <Spinner
        android:id="@+id/player_spinner"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/select_player_button"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_blue_dark" />

    <Button
        android:id="@+id/add_player_button"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/add_player"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_green_dark" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_red_dark" />

</LinearLayout>