<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <Button
        android:id="@+id/back_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="onBackPressed"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/round"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:text="@string/computers_hand"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/computer_right_hand"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/computer_right_hand"
            android:rotationX="180"
            android:src="@drawable/zero" />

        <ImageView
            android:id="@+id/computer_left_hand"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/computer_left_hand"
            android:rotation="180"
            android:src="@drawable/zero" />

    </LinearLayout>

    <TextView
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:text="@string/your_hand"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/left_hand_image"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/your_left_hand"
            android:src="@drawable/zero" />

        <ImageView
            android:id="@+id/right_hand_image"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/your_right_hand"
            android:rotationY="180"
            android:src="@drawable/zero" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:text="@string/your_guess"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn0"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="0"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn20"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="20"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn5"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="5"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn10"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="10"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn15"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="15"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/continue_"
        android:textColor="@android:color/white" />
</LinearLayout>