<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/design_default_color_secondary"
    android:padding="16dp"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:id="@+id/how_to_play">

    <Button
        android:id="@+id/back_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/back"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="onBackPressed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/how_to_play"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/how_to_play_instructions"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</LinearLayout>